fwapp/static/style.css
* {
  margin: 0;
  padding: 0;
  font-family: Arial, Helvetica, sans-serif;
  text-decoration: none;
}

body {
  background-color: white;
}

.topnav {
  position: fixed;
  width: 100%;
  background-color:#72cceb;
}
.topnav a {
  float: left;
  text-align: center;
  color: black;
  padding: 10px 15px;
}
.topnav a.burger {
  font-size: 0.85rem; /* burger char is "bigger" than letters! */
  display: none;
}
.topnav a:hover {
  background-color: #eed063;
  color: black;
}
.topnav .skip-link {
  background: white;
  padding: 5px 5px;
  position: absolute;
  transform: translateY(-100%);
}
.topnav .skip-link:focus {
  transform: translateY(0%);
  text-decoration: underline;
}
@media screen and (max-width: 600px) {
  .topnav a:not(:nth-child(-n + 2)) {
    display: none;
  }
  .topnav a.burger {
    display: block;
    float: right;
  }

  .topnav.showdropdown a.burger {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.showdropdown a {
    float: none;
    display: block;
    text-align: left;
  }
}

main {
  color: black;
  padding: 70px 50px;
}
main a:hover {
  text-decoration: underline;
}
main ul {
  list-style-position: inside;
}
main ol {
  list-style-position: inside;
}

